--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^25.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "sass": "^1.58.0",
-    "sass-loader": "^13.2.0",
-    "css-loader": "^6.7.3",
-    "postcss-loader": "^7.0.2",
     "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.7.2"
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.89.0",
+    "sass-loader": "^13.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
